--- a/intro.tex
+++ b/intro.tex
@@ -7,6 +7,6 @@ Indeed, although drawn from a wide range of domains, most real world social netw
 
 A natural question that arises is thus whether or not models as MMSB and ILFM comply with such properties. MMSB is typically learned from observed data that describe a set of nodes and links between them; from the model learned, one can then predict the probability that a new link will be drawn between two given nodes of the network. The first question we address is thus the following one: \textit{Do  mixed-membership stochastic block models learned from given observations comply with the homophily, preferential attachment and small world effects?}.
 
-A second possible use bayesian models is as a pure generative model to generate artificial networks. In this setting, and as we will see below, the notion of homophily does not make sense as there is no information associated with edges. The question we ask ourselves in this setting is thus: \textit{Do mixed-membership stochastic block models comply with the preferential attachment and small world effects?}. \textcolor{red}{Warn: But one can define the homophily on the latent feature. This why I did first. And the interesting things is that we can show here \emph{Satisfying the homophily effect over the latent feature similarity is equivalent to constrain the feature metric to have weight on the diagnal dominating. It means that models that blockmodel can be interpreted as community and thus the homophily effect and community structure effect are not distinguishable. (see change in \#Homophily)}}
+A second possible use of bayesian models is as a pure generative model to generate artificial networks. In this setting, and as we will see below, the notion of homophily does not make sense as there is no information associated with edges. The question we ask ourselves in this setting is thus: \textit{Do mixed-membership stochastic block models comply with the preferential attachment and small world effects?}. \textcolor{red}{Speech to adapt/CHANGE to incorporate the homophyly. not Small world, and a word about sparsity and class dynamics}
 
 The remainder of the paper is organized as follows. ???
