--- a/main.tex
+++ b/main.tex
@@ -29,7 +29,8 @@
 %\input{./header.tex}
 %%%%%%%%%% Math
 \renewcommand{\text}{\textnormal}
-\newcommand{\pr}{\mathbf{p}}
+%\newcommand{\pr}{\mathbf{p}}
+\newcommand{\pr}{P}
 \newcommand{\p}{P}
 \newcommand{\E}{\mathbb{E}}
 \newcommand{\divkk}{\mathbb{K}}
@@ -43,6 +44,8 @@
 \newcommand{\N}{\mathcal{N}}
 \newcommand{\mat}[1]{\mathbf{#1}}
 \newcommand{\unit}{1\!\!1}
+
+%\renewcommand{\Phi}{\mat{\Phi}}
 
 \title{Are Mixed-Membership Models Adapted for Link
 Prediction in Social Networks ?}
