--- a/table_results.tex
+++ b/table_results.tex
@@ -228,30 +228,30 @@ K = 20
 \end{table*}
 
 
-\begin{table}
-    \caption{Homohily test for IMMSB fit on diferent configarations}
-\begin{tabular}{lrrrr}
-\hline
-IMMSB / Balanced   &     5 &    10 &    15 &    20 \\
-\hline
-Network 1 b/h          & 0.066 & 0.100 & 0.109 & 0.127 \\
-Network 2 b/-h        & 0.065 & 0.100 & 0.141 & 0.126 \\
-Network 3 -b/-h       & 0.035 & 0.083 & 0.067 & 0.076 \\
-Network 4 -b/h         & 0.421 & 0.450 & 0.460 & 0.460 \\
-\hline
-\end{tabular}
-\end{table}
-
-\begin{table}
-    \caption{Homohily test for ILFM fit on different configurations}
-\begin{tabular}{lrrrr}
-\hline
-ILFM / Balanced   &     5 &    10 &    15 &    20 \\
-\hline
-Network 1 b/h        & 0.010 & 0.140 & 0.128 & 0.223 \\
-Network 2 b/-h      & 0.097 & 0.079 & 0.245 & 0.147 \\
-Network 3 -b/-h     & 0.037 & 0.084 & 0.131 & 0.184 \\
-Network 4 -b/h       & 0.181 & 0.442 & 0.479 & 0.503 \\
-\hline
-\end{tabular}
-\end{table}
+%\begin{table}
+%    \caption{Homohily test for IMMSB fit on diferent configarations}
+%\begin{tabular}{lrrrr}
+%\hline
+%IMMSB / Balanced   &     5 &    10 &    15 &    20 \\
+%\hline
+%Network 1 b/h          & 0.066 & 0.100 & 0.109 & 0.127 \\
+%Network 2 b/-h        & 0.065 & 0.100 & 0.141 & 0.126 \\
+%Network 3 -b/-h       & 0.035 & 0.083 & 0.067 & 0.076 \\
+%Network 4 -b/h         & 0.421 & 0.450 & 0.460 & 0.460 \\
+%\hline
+%\end{tabular}
+%\end{table}
+%
+%\begin{table}
+%    \caption{Homohily test for ILFM fit on different configurations}
+%\begin{tabular}{lrrrr}
+%\hline
+%ILFM / Balanced   &     5 &    10 &    15 &    20 \\
+%\hline
+%Network 1 b/h        & 0.010 & 0.140 & 0.128 & 0.223 \\
+%Network 2 b/-h      & 0.097 & 0.079 & 0.245 & 0.147 \\
+%Network 3 -b/-h     & 0.037 & 0.084 & 0.131 & 0.184 \\
+%Network 4 -b/h       & 0.181 & 0.442 & 0.479 & 0.503 \\
+%\hline
+%\end{tabular}
+%\end{table}
